# aptypes-python

./: .gitignore  README.md  pyproject.toml
aptypes/: APComplex.py  APComplexBase.py  APFixed.py  APFixedBase.py  APUcomplex.py  APUfixed.py  __init__.py  __main__.py
aptypes/complex/: APComplex.py  APComplexBase.py  APUcomplex.py  __init__.py
aptypes/real/: APFixed.py  APFixedBase.py  __init__.py
src/aptypes/: __init__.py  __main__.py
src/aptypes/complex/: APComplexBase.py  __init__.py  ap_complex.py  ap_complex_base.py  ap_ucomplex.py
src/aptypes/real/: APUfixed.py  __init__.py  ap_fixed.py  ap_fixed_base.py  ap_ufixed.py
