[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[project]
name = "aptypes"
dynamic = [ "version" ]
authors = [
  { name="DrasLorus", email="draslorus@draslorus.fr" },
]
description = "Collection of classes to simulate arbitrary-fixed-precision fixed-point arithmetics"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
]

[project.urls]
Homepage = "https://github.com/DrasLorus/aptypes-python"
Issues = "https://github.com/DrasLorus/aptypes-python/issues"